Added comic link to the tagline

--- a/index.html
+++ b/index.html
@@ -83,6 +83,16 @@
             transform: translateY(-80px);  
         }
 
+        .main-link {
+    text-decoration: none;
+    color: #fefefe;
+    cursor: pointer;
+}
+
+.main-link:hover {
+    text-decoration: underline;
+}
+
 
         /* Mobile view */
 @media (max-width: 768px) {
@@ -104,6 +114,8 @@
         font-size: 1.1rem;
         transform: translateY(-20px);
         line-height: 1.5;
+
+        text-decoration: none;
     }
     
     body::before {
@@ -119,6 +131,6 @@
     <p class="launch-date">Live on Jan 3, Sat</p>
     <img src="images/querycat_main.png" alt="QueryCat" class="logo">
     <h1 class="brand">QueryCat.app</h1>
-    <p class="tagline">Not astrology, but astronomy of AI SEO.</p>
+    <p class="tagline"><a href="https://drive.google.com/file/d/14n3L5JKbwGvCPspAhyG-oI1pzhd__qaH/view" target="_blank" rel="noopener noreferrer" class="main-link"> Not astrology, but astronomy of AI SEO ⧉</a></p>
 </body>
 </html>
